# autotee

./: .coverage  .gitignore  README.md  RELEASE.md  main.py  pyproject.toml  requirements.txt  test_link_java2rust.py
LLM/: action.py  llmodel.py  output.py  react.py  tasks_tool_creater.py
a0run/: match_block_common.py  match_block_java.py  match_block_python.py
a1sensitive/: 0.query_sensitive.py  0.query_sensitive_gen_dataset.py  1.java_merge.py  1.merge.py  1.merge_Loc.py  1.merge_size.py  1.python_merge.py  2.java_keep_manual.py  2.merged_keep_manual.py  2.python_keep_manual.py  3.java_write_to_file.py  3.merged_write_to_file.py  3.python_write_to_file.py  delete.py  delete_empty_java.py  delete_empty_java_file_without_Test.py  delete_empty_python.py  exp_all_java.py  exp_all_python.py  query_sensitive_java.py
a2mul_case/: all_1source_add_test_llm.py  all_2source_test_build.py  all_2source_test_coverage.py  all_3covert&build.py  project_1source_add_test_llm.py  project_2source_test_build.py  project_3covert&build.py
a4test/: average_iteration.py  get_test_dataset_negative.py  get_test_dataset_positive.py  manual_check.py  merge_dataset.py  select_python_failed.py  statistic_java.py  statistic_python.py  test_assistance.py
analyzers/: base_analyzer.py
autotee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: README.md  base_code.py  code_match.py  code_parse.py  get_env.py  online_tool.py  projectUtil.py  thread_analysis.py
task/: create_test.py  create_tests.py  match_block_common.py  search_sensitive.py  transform.md  transform.py  (+1 more)
(+41 files in other folders)
